--- a/SAR_shoreline.ipynb
+++ b/SAR_shoreline.ipynb
@@ -37,7 +37,7 @@
     "    SDS_tools, SDS_shoreline, SDS_download, SDS_preprocess\n",
     "\n",
     "settings ={\n",
-    "           'output_epsg': 32630,\n",
+    "           'output_epsg': 32620,\n",
     "           'max_dist_ref': 100,           # max distance (in meters) allowed from the reference shoreline\n",
     "           'min_length_shoreline': 500,   # min length (in meters) for shorelines\n",
     "          }"
@@ -58,9 +58,7 @@
     "filepath_sites = os.path.join(base_filepath, 'sites')\n",
     "sites = os.listdir(filepath_sites)\n",
     "\n",
-    "sat_name = 'S1'\n",
-    "\n",
-    "dates = ['2020-01-01', '2020-06-30']\n",
+    "dates = ['2017-01-01', '2017-03-31']\n",
     "\n",
     "for site in sites:\n",
     "\n",
@@ -70,9 +68,10 @@
     "    \n",
     "    sitename = site[:site.find('.')]\n",
     "\n",
-    "    inputs = {'polygon': roi_polygon, 'dates': dates, 'sat_list': [sat_name],\n",
+    "    inputs = {'polygon': roi_polygon, 'dates': dates, 'sat_list': ['S1'],\n",
     "              'sitename': sitename, 'filepath': base_filepath, 'pixel_size': 10,\n",
-    "              'polarisation': 'VH', 'sigma': 5, 'reference_shoreline': False}\n",
+    "              'polarisation': 'VH', 'sigma': 5, 'create_reference_shoreline': False,\n",
+    "             'threshold': 0}\n",
     "               \n",
     "    settings['inputs'] = inputs\n",
     "    \n",
@@ -85,7 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "    metadata = NOC_download.retrieve_median_sar(inputs)\n",
+    "    #metadata = NOC_download.retrieve_median_sar(inputs)\n",
     "    ## load saved metadata\n",
     "    metadata = NOC_download.get_metadata(inputs)\n",
     "    \n",
@@ -131,21 +130,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdf = SDS_tools.output_to_gdf(output, 'lines')\n",
+    "if not inputs['create_reference_shoreline']:\n",
+    "    \n",
+    "    gdf = SDS_tools.output_to_gdf(output, 'lines')\n",
     "\n",
-    "satname = output['satname'][0]\n",
-    "file_string = f'{sitename}_shorelines_{inputs[\"polarisation\"]}.geojson'\n",
+    "    satname = output['satname'][0]\n",
+    "    file_string = f'{sitename}_shorelines_{inputs[\"polarisation\"]}.geojson'\n",
     "\n",
-    "if  ~gdf.empty:\n",
-    "    gdf.crs = {'init':'epsg:'+str(settings['output_epsg'])} # set layer projection\n",
-    "    # save GEOJSON layer to file\n",
-    "    gdf.to_file(os.path.join(inputs['filepath'], inputs['sitename'],\n",
-    "                             file_string),\n",
-    "                             driver='GeoJSON', encoding='utf-8')\n",
-    "    print(f'written: {file_string}')\n",
-    "else:\n",
-    "    print('no shorelines to be seen ...')"
+    "    if  ~gdf.empty:\n",
+    "        gdf.crs = {'init':'epsg:'+str(settings['output_epsg'])} # set layer projection\n",
+    "        # save GEOJSON layer to file\n",
+    "        gdf.to_file(os.path.join(inputs['filepath'], inputs['sitename'],\n",
+    "                                 file_string),\n",
+    "                                 driver='GeoJSON', encoding='utf-8')\n",
+    "        print(f'written: {file_string}')\n",
+    "    else:\n",
+    "        print('no shorelines to be seen ...')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
