--- a/optical_shoreline.ipynb
+++ b/optical_shoreline.ipynb
@@ -33,10 +33,10 @@
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "import matplotlib.pyplot as plt\n",
-    "from coastsat import NOC_tools, NOC_shoreline, NOC_download,\\\n",
+    "from coastsat import NOC_tools, NOC_shoreline, NOC_download, NOC_preprocess, \\\n",
     "    SDS_tools, SDS_shoreline, SDS_download, SDS_preprocess\n",
     "\n",
-    "settings ={'output_epsg': 32630,\n",
+    "settings ={'output_epsg': 32620,\n",
     "           \n",
     "           'cloud_thresh':0.9,\n",
     "           \n",
@@ -109,7 +109,7 @@
     "    sitename = site[:site.find('.')]\n",
     "\n",
     "    inputs = {'polygon': roi_polygon, 'dates': dates, 'sat_list': [sat_name],\n",
-    "              'sitename': sitename, 'filepath': base_filepath}\n",
+    "              'sitename': sitename, 'filepath': base_filepath, 'threshold': 0}\n",
     "    \n",
     "    settings['inputs'] = inputs\n",
     "    \n",
@@ -123,7 +123,7 @@
    "outputs": [],
    "source": [
     "    ## download median images\n",
-    "    metadata = NOC_download.retrieve_median_optical(settings)\n",
+    "    #metadata = NOC_download.retrieve_median_optical(settings)\n",
     "    \n",
     "    print('finished ...')"
    ]
@@ -155,8 +155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib qt\n",
-    "settings['reference_shoreline'] = SDS_preprocess.get_reference_sl(metadata, settings)"
+    "settings['reference_shoreline'] = NOC_preprocess.get_reference_shoreline(inputs)"
    ]
   },
   {
@@ -189,30 +188,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(output.keys())\n",
-    "print(output['dates'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "gdf = SDS_tools.output_to_gdf(output, 'lines')\n",
     "\n",
     "satname = output['satname'][0]\n",
     "file_string = f'{sitename}_shorelines_{satname}.geojson'\n",
     "\n",
-    "if  ~gdf.empty:\n",
-    "    gdf.crs = {'init':'epsg:'+str(settings['output_epsg'])} # set layer projection\n",
-    "    # save GEOJSON layer to file\n",
-    "    gdf.to_file(os.path.join(inputs['filepath'], inputs['sitename'],\n",
-    "                             file_string),\n",
-    "                             driver='GeoJSON', encoding='utf-8')\n",
-    "    print('finished ...')\n",
-    "else:\n",
-    "    print('no shorelines to be seen ...')"
+    "gdf.crs = {'init':'epsg:'+str(settings['output_epsg'])} # set layer projection\n",
+    "# save GEOJSON layer to file\n",
+    "gdf.to_file(os.path.join(inputs['filepath'], inputs['sitename'],\n",
+    "                         file_string),\n",
+    "                         driver='GeoJSON', encoding='utf-8')\n",
+    "print('finished ...')"
    ]
   },
   {
