refactored SAR do use median directory

--- a/SAR_shoreline.ipynb
+++ b/SAR_shoreline.ipynb
@@ -33,6 +33,7 @@
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "import matplotlib.pyplot as plt\n",
+    "from utils.print_utils import printProgress, printWarning\n",
     "from coastsat import NOC_tools, NOC_shoreline, NOC_download, NOC_preprocess,\\\n",
     "    SDS_tools, SDS_shoreline, SDS_download, SDS_preprocess\n",
     "\n",
@@ -50,32 +51,31 @@
    "outputs": [],
    "source": [
     "# directory where the data will be accessed and stored\n",
-    "dataPartition = 'c:\\\\data\\\\coastsat'\n",
+    "data_partition = 'c:\\\\data\\\\coastsat'\n",
     "country = 'UK'\n",
-    "base_filepath = os.path.join(dataPartition, country)  \n",
+    "base_dir_path = os.path.join(data_partition, country)  \n",
+    "sites_dir_path = os.path.join(base_dir_path, 'sites')\n",
+    "sites = os.listdir(sites_dir_path)\n",
     "\n",
-    "# filepaths etc\n",
-    "filepath_sites = os.path.join(base_filepath, 'sites')\n",
-    "sites = os.listdir(filepath_sites)\n",
-    "\n",
-    "dates = ['2017-01-01', '2017-03-31']\n",
+    "dates = ['2017-01-01', '2017-12-31']\n",
     "\n",
     "for site in sites:\n",
     "\n",
-    "    kml_filepath = os.path.join(filepath_sites, site)\n",
+    "    kml_filepath = os.path.join(sites_dir_path, site)\n",
     "    kml_polygon = NOC_tools.polygon_from_kml(kml_filepath)\n",
     "    roi_polygon = SDS_tools.smallest_rectangle(kml_polygon)\n",
     "    \n",
-    "    sitename = site[:site.find('.')]\n",
+    "    site_name = site[:site.find('.')]\n",
+    "    median_dir_path = os.path.join(base_dir_path, site_name, 'median')\n",
     "\n",
     "    inputs = {'polygon': roi_polygon, 'dates': dates, 'sat_list': ['S1'],\n",
-    "              'sitename': sitename, 'filepath': base_filepath, 'pixel_size': 10,\n",
-    "              'polarisation': 'VH', 'sigma': 5, 'create_reference_shoreline': False,\n",
+    "              'site_name': site_name, 'median_dir_path': median_dir_path, 'pixel_size': 10,\n",
+    "              'polarisation': 'VV', 'sigma': 5, 'create_reference_shoreline': False,\n",
     "             'threshold': 0}\n",
     "               \n",
     "    settings['inputs'] = inputs\n",
     "    \n",
-    "    print(f'processing: {sitename}')"
+    "    printProgress(f'processing {site_name}')"
    ]
   },
   {
@@ -86,9 +86,7 @@
    "source": [
     "    #metadata = NOC_download.retrieve_median_sar(inputs)\n",
     "    ## load saved metadata\n",
-    "    metadata = NOC_download.get_metadata(inputs)\n",
-    "    \n",
-    "    print('finished ...')"
+    "    metadata = NOC_download.get_median_metadata(inputs)"
    ]
   },
   {
@@ -97,7 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "    settings['reference_shoreline'] = NOC_preprocess.get_reference_shoreline(inputs)"
+    "    settings['reference_shoreline'] = NOC_preprocess.get_reference_shoreline_median(inputs)"
    ]
   },
   {
@@ -111,17 +109,7 @@
     "    ##Batch shoreline detection\n",
     "    output = NOC_shoreline.extract_shorelines_sar(metadata, settings)\n",
     "    \n",
-    "    print('finished ...')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output = SDS_tools.remove_duplicates(output) # removes duplicates (images taken on the same date by the same satellite)\n",
-    "output = SDS_tools.remove_inaccurate_georef(output, 10) # remove inaccurate georeferencing (set threshold to 10 m)"
+    "    printProgress('finished')"
    ]
   },
   {
@@ -132,20 +120,19 @@
    "source": [
     "if not inputs['create_reference_shoreline']:\n",
     "    \n",
-    "    gdf = SDS_tools.output_to_gdf(output, 'lines')\n",
+    "    gdf = NOC_tools.output_to_gdf_median(output)\n",
     "\n",
-    "    satname = output['satname'][0]\n",
-    "    file_string = f'{sitename}_shorelines_{inputs[\"polarisation\"]}.geojson'\n",
+    "    file_string = f'{site_name}_shorelines_{inputs[\"polarisation\"]}.geojson'\n",
     "\n",
     "    if  ~gdf.empty:\n",
     "        gdf.crs = {'init':'epsg:'+str(settings['output_epsg'])} # set layer projection\n",
     "        # save GEOJSON layer to file\n",
-    "        gdf.to_file(os.path.join(inputs['filepath'], inputs['sitename'],\n",
+    "        gdf.to_file(os.path.join(inputs['median_dir_path'],\n",
     "                                 file_string),\n",
     "                                 driver='GeoJSON', encoding='utf-8')\n",
-    "        print(f'written: {file_string}')\n",
+    "        printProgress(f'written: {file_string}')\n",
     "    else:\n",
-    "        print('no shorelines to be seen ...')"
+    "        printWarning('no shorelines to be seen ...')"
    ]
   },
   {
