started refactoring optical but is broken

--- a/optical_shoreline.ipynb
+++ b/optical_shoreline.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,6 +33,7 @@
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "import matplotlib.pyplot as plt\n",
+    "from utils.print_utils import printProgress, printWarning\n",
     "from coastsat import NOC_tools, NOC_shoreline, NOC_download, NOC_preprocess, \\\n",
     "    SDS_tools, SDS_shoreline, SDS_download, SDS_preprocess\n",
     "\n",
@@ -45,7 +46,19 @@
     "            'buffer_size': 150,         # radius (in metres) for buffer around sandy pixels considered in the shoreline detection\n",
     "            'min_length_sl': 200,       # minimum length (in metres) of shoreline perimeter to be valid\n",
     "            'cloud_mask_issue': False,  # switch this parameter to True if sand pixels are masked (in black) on many images  \n",
-    "    \n",
+    " \n",
+    "            ## Image download Parameters\\n\",\n",
+    "            # Landsat\\n\",\n",
+    "            'LCloudScore': 15,         # Mean cloud score threshold (include images with less then threshold)\\n\",\n",
+    "            'add_L7_to_L5': True,      # Add Landsat 7 to Landsat 5 median composite if they are in same time period\\n\",\n",
+    "            'add_L5_to_L7': True,      # Add Landsat 5 to Landsat 7 median composite if they are in same time period\\n\",\n",
+    "            'add_L7_to_L8': False,      # Add Landsat 7 to Landsat 8 median composite if they are in same time period\\n\",\n",
+    "            'LCloudThreshold': 35,     # Pixels from a single image in a collection larger than this cloud score threshold\\n\",\n",
+    "                                       # will be masked.\\n\",\n",
+    "            'sand_color': '',\n",
+    "           \n",
+    "           'coregistration': False,\n",
+    "           \n",
     "            # Sentinel\n",
     "            'CLOUD_FILTER': 50,         # [Integer] Maximum image cloud cover percent allowed in image collection'\n",
     "            'CLD_PRB_THRESH': 25,       # {Integer] Cloud probability (%); values greater than are considered cloud\n",
@@ -59,7 +72,18 @@
     "           # labels for classes for the classifier and colours for display\n",
     "           'classes':{'hard': [1, [1, 0, 0]], 'nature': [2, [0, 1, 0]],\n",
     "                      'urban': [3, [1, 1, 0]], 'white-water': [4, [1, 0, 1]],\n",
-    "                      'water': [5, [0, 0.4, 1]], 'sand': [6, [1, 0.6, 0]]},                                             \n",
+    "                      'water': [5, [0, 0.4, 1]], 'sand': [6, [1, 0.6, 0]]},\n",
+    "           \n",
+    "            'bands': {\n",
+    "                      'L8': {'pan': [['B8'],15],\n",
+    "                             'ms': [['B2', 'B3', 'B4', 'B5', 'B6', 'BQA'], 30]},\n",
+    "                      'S2': {'10m': [['B2', 'B3', 'B4', 'B8'], 10],\n",
+    "                             '20m': [['B12'], 20],\n",
+    "                             '60m': [['QA60'], 60]},              \n",
+    "                     }\n",
+    "           \n",
+    "   #         'classes':{'white-water': [2, [1, 0, 1]],'water': [3, [0, 0.4, 1]],\n",
+    "   #                    'sand': [1, [1, 0.6, 0]], 'land': [4, [1, 1, 0]]}, \n",
     "          }"
    ]
   },
@@ -83,61 +107,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "progress  >>>  processing Preston\n"
+     ]
+    }
+   ],
    "source": [
     "# directory where the data will be accessed and stored\n",
-    "dataPartition = 'c:\\\\data\\\\coastsat'\n",
+    "data_partition = 'c:\\\\data\\\\coastsat'\n",
     "country = 'UK'\n",
-    "base_filepath = os.path.join(dataPartition, country)  \n",
-    "\n",
-    "# filepaths etc\n",
-    "filepath_sites = os.path.join(base_filepath, 'sites')\n",
-    "sites = os.listdir(filepath_sites)\n",
+    "base_dir_path = os.path.join(data_partition, country)  \n",
+    "sites_dir_path = os.path.join(base_dir_path, 'sites')\n",
+    "sites = os.listdir(sites_dir_path)\n",
     "\n",
     "sat_name = 'S2'\n",
     "\n",
-    "dates = ['2020-01-01', '2020-06-30']\n",
+    "dates = ['2020-01-01', '2020-12-31']\n",
     "\n",
     "for site in sites:\n",
     "\n",
-    "    kml_filepath = os.path.join(filepath_sites, site)\n",
+    "    kml_filepath = os.path.join(sites_dir_path, site)\n",
     "    kml_polygon = NOC_tools.polygon_from_kml(kml_filepath)\n",
     "    roi_polygon = SDS_tools.smallest_rectangle(kml_polygon)\n",
     "    \n",
-    "    sitename = site[:site.find('.')]\n",
+    "    site_name = site[:site.find('.')]\n",
+    "    median_dir_path = os.path.join(base_dir_path, site_name, 'median')\n",
     "\n",
     "    inputs = {'polygon': roi_polygon, 'dates': dates, 'sat_list': [sat_name],\n",
-    "              'sitename': sitename, 'filepath': base_filepath, 'threshold': 0}\n",
+    "              'site_name': site_name, 'median_dir_path': median_dir_path, 'pixel_size': 10,\n",
+    "              'polarisation': 'VV', 'sigma': 5, 'create_reference_shoreline': False,\n",
+    "             'reference_threshold': 0}\n",
     "    \n",
     "    settings['inputs'] = inputs\n",
-    "    \n",
-    "    print(f'Processing: {sitename}')"
+    "    printProgress(f'processing {site_name}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "progress  >>>  connecting to GEE\n",
+      "@@@   S2_SR\n",
+      "progress  >>>  found 71 images\n",
+      "progress  >>>  calculating median image\n",
+      "progress  >>>  downloading median image\n"
+     ]
+    },
+    {
+     "ename": "EEException",
+     "evalue": "Image has no band named \"QA60\".",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mHttpError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\Anaconda3\\envs\\coastee\\lib\\site-packages\\ee\\data.py\u001b[0m in \u001b[0;36m_execute_cloud_call\u001b[1;34m(call, num_retries)\u001b[0m\n\u001b[0;32m    344\u001b[0m   \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 345\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0mcall\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnum_retries\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mnum_retries\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    346\u001b[0m   \u001b[1;32mexcept\u001b[0m \u001b[0mgoogleapiclient\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0merrors\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mHttpError\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\envs\\coastee\\lib\\site-packages\\googleapiclient\\_helpers.py\u001b[0m in \u001b[0;36mpositional_wrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    133\u001b[0m                     \u001b[0mlogger\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwarning\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmessage\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 134\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mwrapped\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    135\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\envs\\coastee\\lib\\site-packages\\googleapiclient\\http.py\u001b[0m in \u001b[0;36mexecute\u001b[1;34m(self, http, num_retries)\u001b[0m\n\u001b[0;32m    914\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mresp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstatus\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[1;36m300\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 915\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mHttpError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresp\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcontent\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0muri\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0muri\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    916\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpostproc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresp\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcontent\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mHttpError\u001b[0m: <HttpError 400 when requesting https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/thumbnails?fields=name&alt=json returned \"Image has no band named \"QA60\".\". Details: \"Image has no band named \"QA60\".\">",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mEEException\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-87b4af874622>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# download median images\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mmetadata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mNOC_download\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mretrieve_median_optical\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msettings\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m## load saved metadata\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mmetadata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mNOC_download\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_median_metadata\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\code\\CoastSat-1.1\\coastsat\\NOC_download.py\u001b[0m in \u001b[0;36mretrieve_median_optical\u001b[1;34m(settings)\u001b[0m\n\u001b[0;32m    160\u001b[0m         \u001b[0mlocal_file_path\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mband_file_path\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mimage_file_name\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    161\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 162\u001b[1;33m         \u001b[0mget_url_optical\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmedian_image\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mee\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mNumber\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mband_scale\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpolygon\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mband_file_path\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mband_names\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    163\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    164\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\code\\CoastSat-1.1\\coastsat\\NOC_download.py\u001b[0m in \u001b[0;36mget_url_optical\u001b[1;34m(image, scale, polygon, filepath, bands)\u001b[0m\n\u001b[0;32m    870\u001b[0m         \u001b[1;34m'region'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mpolygon\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    871\u001b[0m         \u001b[1;34m'filePerBand'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 872\u001b[1;33m         \u001b[1;34m'bands'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mbands\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    873\u001b[0m     })\n\u001b[0;32m    874\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\envs\\coastee\\lib\\site-packages\\ee\\image.py\u001b[0m in \u001b[0;36mgetDownloadURL\u001b[1;34m(self, params)\u001b[0m\n\u001b[0;32m    437\u001b[0m     \u001b[0mrequest\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mparams\u001b[0m \u001b[1;32mor\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    438\u001b[0m     \u001b[0mrequest\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'image'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 439\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmakeDownloadUrl\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetDownloadId\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrequest\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    440\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    441\u001b[0m   \u001b[1;32mdef\u001b[0m \u001b[0mgetThumbId\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\envs\\coastee\\lib\\site-packages\\ee\\data.py\u001b[0m in \u001b[0;36mgetDownloadId\u001b[1;34m(params)\u001b[0m\n\u001b[0;32m    943\u001b[0m     result = _execute_cloud_call(\n\u001b[0;32m    944\u001b[0m         _get_cloud_api_resource().projects().thumbnails().create(\n\u001b[1;32m--> 945\u001b[1;33m             parent=_get_projects_path(), fields='name', body=request))\n\u001b[0m\u001b[0;32m    946\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;34m'docid'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mresult\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'name'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'token'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;34m''\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    947\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\envs\\coastee\\lib\\site-packages\\ee\\data.py\u001b[0m in \u001b[0;36m_execute_cloud_call\u001b[1;34m(call, num_retries)\u001b[0m\n\u001b[0;32m    345\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mcall\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnum_retries\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mnum_retries\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    346\u001b[0m   \u001b[1;32mexcept\u001b[0m \u001b[0mgoogleapiclient\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0merrors\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mHttpError\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 347\u001b[1;33m     \u001b[1;32mraise\u001b[0m \u001b[0m_translate_cloud_exception\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0me\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    348\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    349\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mEEException\u001b[0m: Image has no band named \"QA60\"."
+     ]
+    }
+   ],
    "source": [
-    "    ## download median images\n",
-    "    #metadata = NOC_download.retrieve_median_optical(settings)\n",
+    "    # download median images\n",
+    "    metadata = NOC_download.retrieve_median_optical(settings)\n",
     "    \n",
-    "    print('finished ...')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "    ## load saved metadata\n",
-    "    metadata = NOC_download.get_metadata(inputs)\n",
-    "    \n",
-    "    print('finished ...')"
+    "    metadata = NOC_download.get_median_metadata(inputs)"
    ]
   },
   {
@@ -146,7 +201,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SDS_preprocess.save_jpg(metadata, settings)"
+    "settings['reference_shoreline'] = NOC_preprocess.get_reference_shoreline_median(inputs)"
    ]
   },
   {
@@ -155,7 +210,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "settings['reference_shoreline'] = NOC_preprocess.get_reference_shoreline(inputs)"
+    "metadata"
    ]
   },
   {
