--- a/SAR_shoreline.ipynb
+++ b/SAR_shoreline.ipynb
@@ -70,7 +70,7 @@
     "\n",
     "    inputs = {'polygon': roi_polygon, 'dates': dates, 'sat_list': ['S1'],\n",
     "              'site_name': site_name, 'median_dir_path': median_dir_path, 'pixel_size': 10,\n",
-    "              'polarisation': 'VV', 'sigma': 5, 'create_reference_shoreline': False,\n",
+    "              'polarisation': 'VV', 'sigma': 5, 'create_reference_shoreline': True,\n",
     "              'reference_threshold': 0}\n",
     "               \n",
     "    settings['inputs'] = inputs\n",
