--- a/SAR_shoreline.ipynb
+++ b/SAR_shoreline.ipynb
@@ -57,7 +57,7 @@
     "sites_dir_path = os.path.join(base_dir_path, 'sites')\n",
     "sites = os.listdir(sites_dir_path)\n",
     "\n",
-    "dates = ['2017-01-01', '2017-12-31']\n",
+    "dates = ['2020-01-01', '2020-06-30']\n",
     "\n",
     "for site in sites:\n",
     "\n",
@@ -70,7 +70,7 @@
     "\n",
     "    inputs = {'polygon': roi_polygon, 'dates': dates, 'sat_list': ['S1'],\n",
     "              'site_name': site_name, 'median_dir_path': median_dir_path, 'pixel_size': 10,\n",
-    "              'polarisation': 'VV', 'sigma': 5, 'create_reference_shoreline': True,\n",
+    "              'polarisation': 'VH', 'sigma': 5, 'create_reference_shoreline': True,\n",
     "              'reference_threshold': 0}\n",
     "               \n",
     "    settings['inputs'] = inputs\n",
