--- a/optical_shoreline.ipynb
+++ b/optical_shoreline.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
     "            'BUFFER': 50,               # [Integer] Distance (m) to dilate the edge of cloud-identified objects |\n",
     "\n",
     "            'reference_shoreline': True,\n",
-    "            'max_dist_ref': 200,        # max distance (in meters) allowed from the reference shoreline\n",
+    "            'max_dist_ref': 100,        # max distance (in meters) allowed from the reference shoreline\n",
     "   \n",
     "           # labels for classes for the classifier and colours for display\n",
     "           'classes':{'hard': [1, [1, 0, 0]], 'nature': [2, [0, 1, 0]],\n",
@@ -75,13 +75,10 @@
     "                      'water': [5, [0, 0.4, 1]], 'sand': [6, [1, 0.6, 0]]},\n",
     "           \n",
     "            'bands': {'L8': {'pan': [['B8'],15],\n",
-    "                             'ms': [['B2', 'B3', 'B4', 'B5', 'B6', 'BQA'], 30]},\n",
+    "                             'ms':  [['B2', 'B3', 'B4', 'B5', 'B6', 'B7', 'B10', 'BQA'], 30]},\n",
     "                      'S2': {'10m': [['B2', 'B3', 'B4', 'B8'], 10],\n",
-    "                             '20m': [['B12'], 20],\n",
+    "                             '20m': [['B5', 'B6', 'B7', 'B8A', 'B11', 'B12'], 20],\n",
     "                             '60m': [['B12'], 60]}, }\n",
-    "           \n",
-    "   #         'classes':{'white-water': [2, [1, 0, 1]],'water': [3, [0, 0.4, 1]],\n",
-    "   #                    'sand': [1, [1, 0.6, 0]], 'land': [4, [1, 1, 0]]}, \n",
     "          }"
    ]
   },
@@ -105,17 +102,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "progress  >>>  processing Preston\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# directory where the data will be accessed and stored\n",
     "data_partition = 'c:\\\\data\\\\coastsat'\n",
@@ -126,7 +115,7 @@
     "\n",
     "sat_name = 'S2'\n",
     "\n",
-    "dates = ['2020-01-01', '2020-12-31']\n",
+    "dates = ['2020-01-01', '2020-06-30']\n",
     "\n",
     "for site in sites:\n",
     "\n",
@@ -138,28 +127,18 @@
     "    median_dir_path = os.path.join(base_dir_path, site_name, 'median')\n",
     "\n",
     "    inputs = {'polygon': roi_polygon, 'dates': dates, 'sat_list': [sat_name],\n",
-    "              'site_name': site_name, 'median_dir_path': median_dir_path, 'pixel_size': 10,\n",
-    "              'polarisation': 'VV', 'sigma': 5, 'create_reference_shoreline': False,\n",
-    "             'reference_threshold': 0}\n",
+    "              'site_name': site_name, 'median_dir_path': median_dir_path,\n",
+    "              'reference_threshold': 0}\n",
     "\n",
-    "    \n",
     "    settings['inputs'] = inputs\n",
     "    printProgress(f'processing {site_name}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "progress  >>>  metadata loaded\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "    # download median images\n",
     "    #metadata = NOC_download.retrieve_median_optical(settings)\n",
@@ -170,58 +149,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "progress  >>>  reference shoreline loaded\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "settings['reference_shoreline'] = NOC_preprocess.get_reference_shoreline_median(inputs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "progress  >>>  extracting shorelines \n",
-      "@@@   (460, 751, 4)\n",
-      "\n",
-      "@@@ (460, 751)\n",
-      "@@@ (460, 751, 4)\n",
-      "@@@ (345460, 4)\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "cannot reshape array of size 1381840 into shape (460,751)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-5-a6ffe4fa084a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;31m##Batch shoreline detection\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0moutput\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mNOC_shoreline\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mextract_shorelines_optical_PS\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmetadata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msettings\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32mC:\\code\\CoastSat-1.1\\coastsat\\NOC_shoreline.py\u001b[0m in \u001b[0;36mextract_shorelines_optical_PS\u001b[1;34m(metadata, settings)\u001b[0m\n\u001b[0;32m    188\u001b[0m     \u001b[1;31m# preprocess image (cloud mask + pansharpening/downsampling)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    189\u001b[0m     \u001b[0mimage_ms\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgeoref\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcloud_mask\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mimage_extra\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mimage_QA\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mimage_nodata\u001b[0m \u001b[1;33m=\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 190\u001b[1;33m         \u001b[0mNOC_preprocess\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpreprocess_S2\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfile_paths\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msat_name\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msettings\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'cloud_mask_issue'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    191\u001b[0m     \u001b[1;31m# get image spatial reference system (epsg code) from metadata dict\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    192\u001b[0m     \u001b[0mimage_epsg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmetadata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0msat_name\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'epsg'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\code\\CoastSat-1.1\\coastsat\\NOC_preprocess.py\u001b[0m in \u001b[0;36mpreprocess_S2\u001b[1;34m(filname, satname, cloud_mask_issue)\u001b[0m\n\u001b[0;32m     71\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     72\u001b[0m     \u001b[1;31m# pansharpen SWIR\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 73\u001b[1;33m     \u001b[0mimage_SWIR_ps\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpansharpen_SWIR\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimage_SWIR\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mimage_10m\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     74\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     75\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf'@@@   {image_SWIR.shape}'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\code\\CoastSat-1.1\\coastsat\\NOC_preprocess.py\u001b[0m in \u001b[0;36mpansharpen_SWIR\u001b[1;34m(image_SWIR, image_ms)\u001b[0m\n\u001b[0;32m    113\u001b[0m     \u001b[1;31m# reshape vector into image\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    114\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 115\u001b[1;33m     \u001b[0mimage_SWIR_ps\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mvec_SWIR_ps\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimage_SWIR\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mimage_SWIR\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    116\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    117\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mimage_SWIR_ps\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: cannot reshape array of size 1381840 into shape (460,751)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "    %matplotlib qt\n",
     "    \n",
     "    ##Batch shoreline detection\n",
-    "    output = NOC_shoreline.extract_shorelines_optical_PS(metadata, settings)"
+    "    output = NOC_shoreline.extract_shorelines_optical(metadata, settings, pansharpen=True)"
    ]
   },
   {
