--- a/SAR_shoreline.ipynb
+++ b/SAR_shoreline.ipynb
@@ -38,7 +38,7 @@
     "    SDS_tools, SDS_shoreline, SDS_download, SDS_preprocess\n",
     "\n",
     "settings ={\n",
-    "           'output_epsg': 32620,\n",
+    "           'output_epsg': 32737,\n",
     "           'max_dist_ref': 100,           # max distance (in meters) allowed from the reference shoreline\n",
     "           'min_length_shoreline': 500,   # min length (in meters) for shorelines\n",
     "          }"
@@ -52,7 +52,7 @@
    "source": [
     "# directory where the data will be accessed and stored\n",
     "data_partition = 'c:\\\\data\\\\coastsat'\n",
-    "country = 'UK'\n",
+    "country = 'kenya'\n",
     "base_dir_path = os.path.join(data_partition, country)  \n",
     "sites_dir_path = os.path.join(base_dir_path, 'sites')\n",
     "sites = os.listdir(sites_dir_path)\n",
@@ -84,7 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "    #metadata = NOC_download.retrieve_median_sar(inputs)\n",
+    "    metadata = NOC_download.retrieve_median_sar(inputs)\n",
     "    ## load saved metadata\n",
     "    metadata = NOC_download.get_median_metadata(inputs)"
    ]
