--- a/SAR_shoreline.ipynb
+++ b/SAR_shoreline.ipynb
@@ -41,15 +41,8 @@
     "           'output_epsg': 32737,\n",
     "           'max_dist_ref': 100,           # max distance (in meters) allowed from the reference shoreline\n",
     "           'min_length_shoreline': 500,   # min length (in meters) for shorelines\n",
-    "          }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "          }\n",
+    "\n",
     "# directory where the data will be accessed and stored\n",
     "data_partition = 'c:\\\\data\\\\coastsat'\n",
     "country = 'kenya'\n",
@@ -57,25 +50,51 @@
     "sites_dir_path = os.path.join(base_dir_path, 'sites')\n",
     "sites = os.listdir(sites_dir_path)\n",
     "\n",
-    "dates = ['2020-01-01', '2020-06-30']\n",
-    "\n",
+    "dates = [['2019-01-01', '2019-06-30'],\n",
+    "         ['2019-07-01', '2019-12-31'],\n",
+    "         ['2020-01-01', '2020-06-30'],\n",
+    "         ['2020-07-01', '2020-12-31']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## download Sentinel-1 data from GEE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for site in sites:\n",
+    "    for date_pair in dates:\n",
     "\n",
-    "    kml_filepath = os.path.join(sites_dir_path, site)\n",
-    "    kml_polygon = NOC_tools.polygon_from_kml(kml_filepath)\n",
-    "    roi_polygon = SDS_tools.smallest_rectangle(kml_polygon)\n",
-    "    \n",
-    "    site_name = site[:site.find('.')]\n",
-    "    median_dir_path = os.path.join(base_dir_path, site_name, 'median')\n",
+    "        site_name = site[:site.find('.')]\n",
+    "        median_dir_path = os.path.join(base_dir_path, site_name, 'median')\n",
+    "        \n",
+    "        kml_filepath = os.path.join(sites_dir_path, site)\n",
+    "        kml_polygon = NOC_tools.polygon_from_kml(kml_filepath)\n",
+    "        roi_polygon = SDS_tools.smallest_rectangle(kml_polygon)\n",
     "\n",
-    "    inputs = {'polygon': roi_polygon, 'dates': dates, 'sat_list': ['S1'],\n",
-    "              'site_name': site_name, 'median_dir_path': median_dir_path, 'pixel_size': 10,\n",
-    "              'polarisation': 'VH', 'sigma': 5, 'create_reference_shoreline': True,\n",
-    "              'reference_threshold': 0}\n",
-    "               \n",
-    "    settings['inputs'] = inputs\n",
-    "    \n",
-    "    printProgress(f'processing {site_name}')"
+    "        inputs = {'polygon': roi_polygon, 'dates': date_pair, 'sat_name': 'S1',\n",
+    "                  'site_name': site_name, 'median_dir_path': median_dir_path, 'pixel_size': 10}\n",
+    "\n",
+    "        printProgress(f'processing {site_name}: {date_pair}')\n",
+    "        printProgress('')\n",
+    "        \n",
+    "        NOC_download.retrieve_median_sar(inputs)\n",
+    "        \n",
+    "NOC_download.save_metadata(inputs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## extract reference shorelines"
    ]
   },
   {
@@ -84,55 +103,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "    metadata = NOC_download.retrieve_median_sar(inputs)\n",
-    "    ## load saved metadata\n",
-    "    metadata = NOC_download.get_median_metadata(inputs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "    settings['reference_shoreline'] = NOC_preprocess.get_reference_shoreline_median(inputs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "    %matplotlib qt\n",
-    "    \n",
-    "    ##Batch shoreline detection\n",
-    "    output = NOC_shoreline.extract_shorelines_sar(metadata, settings)\n",
-    "    \n",
-    "    printProgress('finished')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if not inputs['create_reference_shoreline']:\n",
-    "    \n",
-    "    gdf = NOC_tools.output_to_gdf_median(output)\n",
+    "for site in sites:\n",
+    "    for date_pair in dates:\n",
+    "        \n",
+    "        site_name = site[:site.find('.')]\n",
+    "        median_dir_path = os.path.join(base_dir_path, site_name, 'median')\n",
     "\n",
-    "    file_string = f'{site_name}_shorelines_{inputs[\"polarisation\"]}.geojson'\n",
+    "        inputs = {'dates': date_pair, 'sat_name': 'S1', 'site_name': site_name,\n",
+    "              'median_dir_path': median_dir_path, 'pixel_size': 10}\n",
     "\n",
-    "    if  ~gdf.empty:\n",
-    "        gdf.crs = {'init':'epsg:'+str(settings['output_epsg'])} # set layer projection\n",
-    "        # save GEOJSON layer to file\n",
-    "        gdf.to_file(os.path.join(inputs['median_dir_path'],\n",
-    "                                 file_string),\n",
-    "                                 driver='GeoJSON', encoding='utf-8')\n",
-    "        printProgress(f'written: {file_string}')\n",
-    "    else:\n",
-    "        printWarning('no shorelines to be seen ...')"
+    "        inputs['polarisation'] = 'VH'\n",
+    "        inputs['sigma'] = 5\n",
+    "        inputs['create_reference_shoreline'] = True\n",
+    "        inputs['reference_threshold'] = 0\n",
+    "\n",
+    "        settings['inputs'] = inputs\n",
+    "\n",
+    "        metadata = NOC_download.load_metadata(inputs)\n",
+    "        settings['reference_shoreline'] = NOC_preprocess.get_reference_shoreline_median(inputs)\n",
+    "        printProgress('')\n",
+    "\n",
+    "        %matplotlib qt\n",
+    "        shorelines = NOC_shoreline.extract_shorelines_sar(metadata, settings)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## extract shorelines"
    ]
   },
   {
@@ -140,7 +139,32 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "inputs['create_reference_shoreline'] = False\n",
+    "inputs['reference_threshold'] = 0\n",
+    "\n",
+    "settings['inputs'] = inputs\n",
+    "\n",
+    "settings['reference_shoreline'] = NOC_preprocess.get_reference_shoreline_median(inputs)\n",
+    "printProgress('')\n",
+    "\n",
+    "%matplotlib qt\n",
+    "shorelines = NOC_shoreline.extract_shorelines_sar(metadata, settings)                \n",
+    "\n",
+    "gdf = NOC_tools.output_to_gdf(shorelines, metadata)\n",
+    "\n",
+    "file_string = f'{site_name}_shorelines_{inputs[\"polarisation\"]}.geojson'\n",
+    "\n",
+    "if  ~gdf.empty:\n",
+    "    gdf.crs = {'init':'epsg:'+str(settings['output_epsg'])} # set layer projection\n",
+    "    # save GEOJSON layer to file\n",
+    "    gdf.to_file(os.path.join(inputs['median_dir_path'],\n",
+    "                             file_string),\n",
+    "                             driver='GeoJSON', encoding='utf-8')\n",
+    "    printProgress(f'written: {file_string}')\n",
+    "else:\n",
+    "    printWarning('no shorelines to be seen ...')"
+   ]
   }
  ],
  "metadata": {
